Add projects to the website
- Added projects to the site, fetched from github API(s)
- Added loader/spinner to enhance UX

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
     <script src="https://www.google.com/recaptcha/api.js?render=6LeuWfceAAAAAEIeTpggnWbNaEXYY8e6QHw-kd-3"></script>
   </head>
   <body>
+    <div class="loader-container">
+      <span class="loader"></span>
+    </div>
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
@@ -245,9 +248,7 @@
           <span class="heading-sec__main">Projects</span>
         </h2>
 
-        <div class="projects__content">
-          <div class="projects__row">Comming Soon</div>
-        </div>
+        <div class="projects__content" id="showcase"></div>
       </div>
     </section>
     <section id="resume" class="resume sec-pad">
